--- a/modulo-1/filter-users.html
+++ b/modulo-1/filter-users.html
@@ -81,10 +81,6 @@
       align-items: center;
     }
 
-    main #statistics ul {
-      display: none;
-    }
-
     main img {
       width: 60px;
       height: 60px;
@@ -144,6 +140,7 @@
   <header>
     <h1>Pesquisa de usuários</h1>
   </header>
+
   <main class="container">
     <form action="">
       <input type="text" placeholder="buscar" required>
@@ -157,16 +154,11 @@
           <p>nenhum usuário filtrado</p>  
         </article>
       </div>
+      
       <div>
         <h2>Estatísticas</h2>
         <article id="statistics">
           <p>nada a ser exibido</p>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
         </article>
       </div>
     </section>
@@ -186,26 +178,36 @@
         this.input = document.querySelector('input')
         this.result = document.getElementById('result')
         this.statistics = document.getElementById('statistics')
+        this.arrayPeople = []
         this.results = []
+        this.getPeople()
         this.event()
       }
 
       event() {
-        this.form.onsubmit = e => this.getPeople(e)
+        this.form.onsubmit = e => this.people(e)
       }
 
-      async getPeople(e) {
-        e.preventDefault()
-
+      async getPeople() {
         const response = await fetch('https://randomuser.me/api/?seed=javascript&results=100&nat=BR&noinfo')
         const data = await response.json()
 
         data.results.filter(person => {
           const { gender, name: { first, last }, picture: { large }, dob: { age } } = person
 
+          this.arrayPeople.push({ gender, first, last, large, age })
+        }) 
+      }
+
+      people(e) {
+        e.preventDefault()
+
+        this.arrayPeople.filter(person => {
+          const { gender, first, last, large, age } = person
+
           const sentence = this.input.value.toLowerCase()
 
-          if(gender.toLowerCase() == sentence || first.toLowerCase().includes(sentence) || last.toLowerCase().includes(sentence) || age == sentence) 
+          if(gender.toLowerCase() == sentence || first.concat(last).toLowerCase().includes(sentence.replace(' ', '')) || age == sentence) 
             this.results.push({ gender, first, last, large, age })
         })
 
@@ -242,7 +244,11 @@
       }
 
       renderStatistics() {
-        const [l1, l2, l3, l4] = this.statistics.querySelectorAll('li')
+        const ul = document.createElement('ul')
+        const l1 = document.createElement('li')
+        const l2 = document.createElement('li')
+        const l3 = document.createElement('li')
+        const l4 = document.createElement('li')
 
         const totalMale = this.results.filter(person => person.gender == 'male')
 
@@ -259,7 +265,12 @@
         l4.textContent = 'Média das idades: ' + averageAges.toFixed(2)
 
         this.statistics.querySelector('p').style.display = 'none'
-        this.statistics.querySelector('ul').style.display = 'block'
+
+        ul.appendChild(l1)
+        ul.appendChild(l2)
+        ul.appendChild(l3)
+        ul.appendChild(l4)
+        this.statistics.appendChild(ul)
       }
     }
 
